<resources>
    <string name="app_name">NasaApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_search">Search</string>

    <string name="search_wiki">Find in Wiki</string>
    <string name="wiki_helper_text">Wikipedia searching</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="dark_theme_label">Dark</string>
    <string name="light_theme_label">Light</string>
    <string name="theme_label">Theme</string>
    <string name="picture_of_the_day_bnd_label">Picture of the day</string>
    <string name="news_bnd_label">News</string>
    <string name="pod_view_pager_fragment_label">Picture of the day</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="image_gallery_fragment_label">Image gallery fragment</string>
    <string name="image_gallery_bnv">Gallery</string>
    <string name="about_bnv">About</string>
    <string name="about_app_text">Simple NasaApp. 2021</string>
    <string name="about_text_author">By unknown author</string>
    <string name="notes_bnd_label">Notes</string>


    <string name="date_format">E, dd MMM HH:mm</string>
    <string name="note_tools_body_text">Some body text</string>
    <string name="notes_tools_date_text">Date text</string>
    <string name="notes_title_text">Title text</string>
    <string name="note_title">Title</string>
    <string name="new_note_title">New note</string>
    <string name="note_body">Note</string>
    <string name="new_note">New note</string>
    <string name="title_activity_note_view">NoteViewActivity</string>

    <string name="chose_note_color_dialog_text">Specify note color</string>
    <string name="close">Close</string>
    <string name="chose_note_color_dialog_title">Color pick</string>

    <string name="color_selection_title">Select color</string>
    <string name="note_pick_color">Pick color</string>
    <string name="add_new_note">Add note</string>
    <string name="action_recover_deleted_note">Dou you want to recover deleted note?</string>
    <string name="snckbar_recover_btn">Recover</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splash_continue_btn_label">Continue</string>
    <string name="nasa_logo_description">Nasa logo</string>
</resources>