<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/note_preview_margin"  >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/note_title"
            style="@style/NoteBriefHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            tools:text="@string/notes_title_text" />

        <TextView
            android:id="@+id/note_date"
            style="@style/NoteBriefHeader"
            android:layout_height="wrap_content"
            tools:text="@string/notes_tools_date_text" />

        <TextView
            android:id="@+id/note_body"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="fill"
            android:layout_columnSpan="4"
            android:ellipsize="end"
            android:maxLines="1"
            style="@style/NoteBriefText"
            tools:text="@string/note_tools_body_text" />
    </GridLayout>
</androidx.cardview.widget.CardView>


