<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="?attr/toolbarStyle">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="?attr/toolbarStyle">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:id="@+id/delemitter_1"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_app_bar"
        style="?attr/switchStyle"
        android:background="?attr/colorOnPrimary"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/delemitter_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textOn="@string/dark_theme_label"
        android:textOff="@string/light_theme_label"
        app:showText="true"
        android:text="@string/theme_label"
        style="?attr/switchStyle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/themeSelection"
        android:background="?attr/colorOnPrimary"
        style="?attr/switchStyle"
    />

</androidx.constraintlayout.widget.ConstraintLayout>