<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="?attr/toolbarStyle"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="?attr/toolbarStyle">

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/appbar_motion_transition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutDescription="@xml/view_pager_pod_layout_appbar_scene">

                <TextView
                    android:id="@+id/appbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textSize="@dimen/toolbar_app_title"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="visible"
                />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_text_layout"
                    style="?attr/textInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_wiki"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_wikipedia"
                    app:endIconMode="custom"
                    app:helperText="@string/wiki_helper_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.motion.widget.MotionLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_layout_height"
        android:layout_marginTop="@dimen/tab_layout_margin_top"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:tabGravity="center"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorHeight="0dp"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:constraint_referenced_ids="tab_layout"
    />

</androidx.constraintlayout.widget.ConstraintLayout>